			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03d: *********************************
************************* Version 8.03c: *********************************

BUG: (08/18/05, GVG) Fix for bogous DRC rule RPO.R.1 (Bug #478)

IMP: (08/17/05, GVG) RPO resistors in 180nm (Bug #458)

IMP: (08/17/05, GVG) More changes for Mosis->TSMC switch in 180nm

BUG: (08/17/05, GVG) Problems getting via spacing rules for multi-cuts. (Bug #468)
Note: This might generate more errors in TSMC90 because vdd/gnd must be connected explicitly in some
cells.
FIX: Three states for multi cuts: -1 (don't care), (0) 1xN arrays, (1) MxN arrays for contacts.

IMP: (08/17/05, GVG) ALGO_SWEEP default in DRC area checking

BUG: (08/17/05, GVG) imported cells from GDS should be given type {lay} (Bug #472)
FIX: Added View.LAYOUT.getAbbreviation() to the cell name during importing of the cell.

BUG: (08/16/05, RK) GDS import places Exports on wrong layer (Bug #471)

BUG: (08/16/05, GVG) Unable to probe global signals in Waveform (Bug #470)
FIX: Added Globals in Waveform.getSpiceNetName() because globals are nor marked
as export.

BUG: (08/16/05, DN) Bug in "List connections on network" (Bug #466).
FIX: In ToolMenu.listConnectionsOnNetwork use "HashSet ports" instead of "PortProto pp".

BUG: (08/14/05, GVG) Fix to avoid exception if layers[i] is null in Technology.setColorMapFromLayers()
on Mac (not sure if happens on other machines)

IMP: (08/12/05, RK) 90nm Layout Generator: add invCLK (Bug# 463)

BUG: (08/12/05, RK) NCC Fix for: NCC throws exception: "Must be leaf", (Bug# 459)

IMP: (08/12/05, GVG) Extra functions to covert MoCMOS cells into TSMC180 ones.
Resize of primitive nodes only available for 180nm tech. Poly arcs and transistor lengths
are resized to multiple of the default value (2.0 for MoCMOS or 1.8 for TSMC).
